...
                }
                .tag(2)
            MyCombinedView(alertToOpen: $alertToOpen)
                .postHogScreenView("My Content")
                .tabItem {
                    Image(systemName: "star")
                    Text("Moje")
                }
                .badge(totalUnseenResultsCount > 0 ? totalUnseenResultsCount : 0)
                .tag(3)
            SettingsView()
                .postHogScreenView("Settings")
                .tabItem {
...
    
    var id: String { rawValue }
    
    var title: String {
        switch self {
        case .favorites:
            return "Moje Akty"
        case .alerts:
            return "Moje Alerty"
        }
    }
}

...
